--- a/Terminal/settings.json
+++ b/Terminal/settings.json
@@ -42,6 +42,7 @@
     {
         "defaults": 
         {
+            "adjustIndistinguishableColors": "always",
             "antialiasingMode": "cleartype",
             "bellStyle": 
             [
@@ -87,16 +88,16 @@
                 "name": "Windows: Cmd"
             },
             {
-                "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
-                "hidden": false,
-                "name": "WSL: Ubuntu",
-                "source": "Windows.Terminal.Wsl"
-            },
-            {
                 "guid": "{d7b20cea-47a9-518c-95a4-c8bd91e2e1c6}",
                 "hidden": false,
                 "name": "Ubuntu 22.04.2 LTS",
                 "source": "CanonicalGroupLimited.Ubuntu22.04LTS_79rhkp1fndgsc"
+            },
+            {
+                "guid": "{17bf3de4-5353-5709-bcf9-835bd952a95e}",
+                "hidden": false,
+                "name": "Ubuntu-22.04",
+                "source": "Windows.Terminal.Wsl"
             }
         ]
     },
@@ -356,6 +357,7 @@
             "yellow": "#808000"
         }
     ],
+    "startOnUserLogin": false,
     "tabWidthMode": "titleLength",
     "themes": [],
     "trimBlockSelection": true,
