--- a/VsCode/settings.json
+++ b/VsCode/settings.json
@@ -191,7 +191,7 @@
     ---[ Ext: Azure-Pipelines ]---
   */
   "azure-pipelines.configure": true,
-  "azure-pipelines.customSchemaFile": "{env:APPDATA}/Code/User/settings.ext/azure-pipelines/yaml-schema.json",
+  "azure-pipelines.customSchemaFile": "${env:APPDATA}/Code/User/settings.ext/azure-pipelines/yaml-schema.json",
   /*
 
 
@@ -305,7 +305,7 @@
     ---[ Ext: PowerShell: Script-analysis ]---
   */
   "powershell.scriptAnalysis.enable": true,
-  "powershell.scriptAnalysis.settingsPath": "{env:APPDATA}/Code/User/settings.ext/powershell/script-analysis.psd1",
+  "powershell.scriptAnalysis.settingsPath": "${env:APPDATA}/Code/User/settings.ext/powershell/script-analysis.psd1",
   /*
 
 
